VERSION 1.1.5
------------------------
   o thr option was added in plotTensor3D.

VERSION 1.1.4
------------------------
   o Projected NMF ("Projected"), Nonnegative Hebbian Rule (NHR) ("NHR"), Ding-Ti-Peg-Park (DTPP) algorithm ("DTPP"), (Column vector-wise) Orthogonal NMF ("Orthogonal"), and (Column vector-wise) Orthogonality-regularized NMF ("OrthReg") were added in NMF.
   o Algorithm "NMF" is introduced in each iteration of NTD.

VERSION 1.1.2
------------------------
   o pseudocount option to avoid zero-division was added in NMF, jNMF, siNMF, NTF, and NTD

VERSION 1.1.0
------------------------
   o Refactored some codes (e.g. check argument parts)
   o L1/L2-regularization terms were introduced in NMF, jNMF, siNMF, NTF, and NTD

VERSION 1.0.7
------------------------
   o Resubmission to CRAN due to temporary inaccessibility of rTensor

VERSION 1.0.5
------------------------
   o Mask matrix/tensor were implemented for NMF, jNMF, siNMF, NTF, and NTD. These options are for missing values estimation (Imputation).
   o Initial matrix/tensor were implemented for NMF, jNMF, siNMF, NTF, and NTD.
   o fix* options were implemented for transfer learning.
   o Gabriel-style cross-validation was implemented as GabrielNMF.

VERSION 1.0.4
------------------------
   o Rank estimation methods and plot functions were implemented for NMF

VERSION 1.0.3
------------------------
   o Higher-order (>=4) tensor decomposition were implemented for NTF and NTD

   VERSION 1.0.1 - 1.0.2
------------------------
   o Some bugs were fixed

VERSION 1.0.0
------------------------
   o Simutaneous NMF (siNMF) and joint NMF (jNMF) were added

VERSION 0.99.5
------------------------
   o modes parameter was added in NTF (NTD1 and NTD2 model)
   o Convergence was judged by relative error

VERSION 0.99.4
------------------------
   o set.seeds argument was added in toyModel

VERSION 0.99.3
------------------------
   o Date fields in DESCRIPTION

VERSION 0.99.2
------------------------