@@ -1,21 +1,21 @@
-\name{plotTensor3D}
+\name{plotTensor2D}
 \docType{methods}
-\alias{plotTensor3D}
+\alias{plotTensor2D}
 
 \title{
-Plot function for visualization of tensor data structure
+Plot function for visualization of matrix data structure
 }
 \description{
-Combined with recTensor function and the result of NTF or NTD, the reconstructed tensor structure can be visullized.
+Combined with recTensor function and the result of NTF or NTD, the reconstructed tesor structure can be visullized.
 }
 \usage{
-plotTensor3D(X = NULL, method=c("sd", "mad"),
-  sign=c("positive", "negative", "both"), thr=2)
+plotTensor2D(X = NULL, method=c("sd", "mad"),
+    sign=c("positive", "negative", "both"), thr=2)
 }
 
 \arguments{
   \item{X}{
-Tensor object, which is defined as S4 class of rTensor package.
+Matrix object.
   }
   \item{method}{
 Cutoff method to focus on large/small value in the tensor data (Default: "sd").
@@ -32,12 +32,12 @@ Threshold of cutoff method (Default: 2).
 \examples{
 tensordata <- toyModel(model = "CP")
 
-out <- NTF(tensordata, rank=3, algorithm="Beta-HALS", num.iter=2)
+out <- NTF(tensordata, rank=3, num.iter=2)
 
 tmp <- tempdir()
 
 png(filename=paste0(tmp, "/NTF.png"))
-plotTensor3D(recTensor(out$S, out$A))
+plotTensor2D(out$A[[1]])
 dev.off()
 }
 
